--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <section>
+        <article>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus quas, veritatis dolorem maxime
+            hic tempora quidem enim magnam, modi quisquam inventore rerum cum nisi nesciunt error! Praesentium, minus.
+        </article>
+    </section>
     
 </body>
 </html>
